--- a/sites/portfolio/assets/scss/_structure.scss
+++ b/sites/portfolio/assets/scss/_structure.scss
@@ -3,8 +3,14 @@ main {
 
     >section {
         display: none;
-        padding-right: 32x;
+        padding-right: 32px;
         padding-left: 32px;
+        width: 100%;
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
 
         &:not(#home) {
             padding-top: 64px;
